Fixes main menu alignment in Firefox.
Main menu was displaying properly aligned in all browsers except
firefox.  I corrected by adjusting menu padding and height.

mario h.
node/60302

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -764,11 +764,12 @@
   font-size: 15px;
   font-size: 0.9375rem;
   display: inline-block;
-  padding: 6px 2em 7px 2em;
+  padding: 7px 2em;
   text-transform: uppercase;
   color: #fff;
   background: #316dae;
   text-decoration: none;
+  height: 16px;
 }
 #block-system-main-menu .menu li a:hover, #block-system-main-menu .menu li a:focus {
   background: #ffffff;
